force-app/main/default/objects/Non_ACR_Template__c/Non_ACR_Template__c.object-meta.xml
<CustomObject>
    <label>Non ACR Template</label>
    <nameField>
        <displayFormat>NACR-{000000}</displayFormat>
        <label>Non ACR Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non ACR Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>