force-app/main/default/objects/Non_ACR_Template__c/fields/Fuel_Surcharge_if_requested__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge_if_requested__c</fullName>
    <label>Fuel Surcharge if requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>