force-app/main/default/objects/Non_ACR_Template__c/fields/Liability_Coverage_If_Requested__c.field-meta.xml
<CustomField>
    <fullName>Liability_Coverage_If_Requested__c</fullName>
    <label>Liability Coverage (If Requested)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>