force-app/main/default/objects/Non_ACR_Template__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SBQQ__Quote__c.Business_Type__c</field>
            <operation>equals</operation>
            <value>Non ACR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Non ACR Templates</relationshipLabel>
    <relationshipName>Non_ACR_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>