force-app/main/default/objects/Non_ACR_Template__c/fields/ST_0_1_KG__c.field-meta.xml
<CustomField>
    <fullName>ST_0_1_KG__c</fullName>
    <label>Shipment Weight=0-1 KG</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>