force-app/main/default/objects/Non_ACR_Template__c/fields/ST_10_01_20_KG__c.field-meta.xml
<CustomField>
    <fullName>ST_10_01_20_KG__c</fullName>
    <label>Shipment Weight=10.01-20 KG</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>