force-app/main/default/objects/Non_ACR_Template__c/fields/ST_1_01_3_KG__c.field-meta.xml
<CustomField>
    <fullName>ST_1_01_3_KG__c</fullName>
    <label>Shipment Weight=1.01-3 KG</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>