force-app/main/default/objects/Non_ACR_Template__c/fields/ST_BVC_Service__c.field-meta.xml
<CustomField>
    <fullName>ST_BVC_Service__c</fullName>
    <externalId>true</externalId>
    <label>BVC Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>