force-app/main/default/objects/Non_ACR_Template__c/fields/ST_Cost_Per__c.field-meta.xml
<CustomField>
    <fullName>ST_Cost_Per__c</fullName>
    <label>Cost Per</label>
    <length>255</length>
    <type>Text</type>
</CustomField>