force-app/main/default/objects/Non_ACR_Template__c/fields/ST_Gross_Weight_Slabs__c.field-meta.xml
<CustomField>
    <fullName>ST_Gross_Weight_Slabs__c</fullName>
    <label>Gross Weight Slabs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 1 Kg</fullName>
            </value>
            <value>
                <fullName>1.01 - 3 Kg</fullName>
            </value>
            <value>
                <fullName>3.01 - 10 Kg</fullName>
            </value>
            <value>
                <fullName>10.01 - 20 Kg</fullName>
            </value>
            <value>
                <fullName>20.01+ Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>