force-app/main/default/objects/Non_ACR_Template__c/fields/ST_Minimum_Freight_Per_Shipment__c.field-meta.xml
<CustomField>
    <fullName>ST_Minimum_Freight_Per_Shipment__c</fullName>
    <label>ST_Minimum Freight Per Shipment</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>