force-app/main/default/objects/Non_ACR_Template__c/fields/ST_Offline_Loc_Chg_Per_Shipment_If_Appl__c.field-meta.xml
<CustomField>
    <fullName>ST_Offline_Loc_Chg_Per_Shipment_If_Appl__c</fullName>
    <label>Offline Location Charge Per Shipment(If</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>