force-app/main/default/objects/Non_ACR_Template__c/fields/ST_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>ST_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Quote__c</field>
            <operation>equals</operation>
            <valueField>$Source.Quote__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Non ACR Templates</relationshipLabel>
    <relationshipName>Non_ACR_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>