force-app/main/default/objects/Non_ACR_Template__c/fields/ST_Shipment_Weight_20_01__c.field-meta.xml
<CustomField>
    <fullName>ST_Shipment_Weight_20_01__c</fullName>
    <label>Shipment Weight=20.01+</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>