force-app/main/default/objects/Non_ACR_Template__c/fields/ST_Shipment_Weight_3_01_10_KG__c.field-meta.xml
<CustomField>
    <fullName>ST_Shipment_Weight_3_01_10_KG__c</fullName>
    <label>Shipment Weight=3.01-10 KG</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>